src/main/java/com/example/voting_system/error/AppException.java
package com.example.voting_system.error;

import lombok.NonNull;

public class AppException extends RuntimeException {

    public AppException(@NonNull String message) {
        super(message);
    }
}
